==> AmmarOkla12772/samplexFork2/targets/STMicroelectronics/NUCLEO_F401RE/lib/bsp/src/bsp_led.c <==
/*
 * Copyright (c) 2026 Eclipse ThreadX contributors
 *
 * This program and the accompanying materials are made available
 * under the terms of the MIT license which is available at
 * https://opensource.org/license/mit.
 *
 * SPDX-License-Identifier: MIT
 */

#include "stm32f4xx_hal.h"
#include "bsp/led.h"

#define NUCLEO_LED_PIN       GPIO_PIN_5
#define NUCLEO_LED_GPIO_PORT GPIOA

void bsp_led_init(void)
{
    GPIO_InitTypeDef gpio = {0};

    /* Enable Port A clock locally */
    __HAL_RCC_GPIOA_CLK_ENABLE();

    gpio.Pin   = NUCLEO_LED_PIN;
    gpio.Mode  = GPIO_MODE_OUTPUT_PP;
    gpio.Pull  = GPIO_NOPULL;
    gpio.Speed = GPIO_SPEED_FREQ_LOW;
    HAL_GPIO_Init(NUCLEO_LED_GPIO_PORT, &gpio);

    bsp_led_off();
}

void bsp_led_on(void)
{
    HAL_GPIO_WritePin(NUCLEO_LED_GPIO_PORT, NUCLEO_LED_PIN, GPIO_PIN_SET);
}

void bsp_led_off(void)
{
    HAL_GPIO_WritePin(NUCLEO_LED_GPIO_PORT, NUCLEO_LED_PIN, GPIO_PIN_RESET);
}

void bsp_led_toggle(void)
{
    HAL_GPIO_TogglePin(NUCLEO_LED_GPIO_PORT, NUCLEO_LED_PIN);
}
